@@ -9,6 +9,7 @@ Development Version
 
 Bugs fixed
 * Fix a regression in statement splitter (#7).
+* Fix a bug when building connection parameters for Oracle (#2).
 
 
 Version 0.4.0 (2015-03-02)
